tests/NormalTests/paczka1/fuzzy1/15375495.err
Error in line 6: 9m5IRUKAG A756 41,2
Error in line 8: 9m5IRUKAG S122 2,2
Error in line 15: 5hg 122 73,3
Error in line 29: 5kUF A600 77,5
Error in line 31: 5kUF A756 90,2
Error in line 34: 14OqrO A756 74,8
Error in line 36: 9m~IRUKAG A600 4,8
